tests/src/frontend/typechecking/invalid/call_on_field.sk
fun no(): void {
  _: Int = MyEnum::A.value()
}

value class MyEnum private (value: Int) {
  const A: MyEnum = MyEnum(1);
}
